--- a/index.html
+++ b/index.html
@@ -58,33 +58,36 @@
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
-
+				
+							<!--
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
 								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
+							-->
+							<header>
+								<h2 class="alt">Hi! I'm Devon!</h2>
+								<p>Currently a 2nd year mathematics student at UBC, with passion and motives to pursue software engineering!</p>
+							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">My Projects</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Projects -->
+					<section id="Projects" class="two">
 						<div class="container">
 
 							<header>
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here's all my projects that I've worked on over the course of my time at UBC and during my free time.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
