--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#projects" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -73,18 +73,18 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">My Projects</a>
+								<a href="#Projects" class="button scrolly">My Projects</a>
 							</footer>
 
 						</div>
 					</section>
 
 				<!-- Projects -->
-					<section id="Projects" class="two">
+					<section id="projects" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Projects</h2>
 							</header>
 
 							<p>Here's all my projects that I've worked on over the course of my time at UBC and during my free time.</p>
