--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</header>
 
 							<footer>
-								<a href="#Projects" class="button scrolly">My Projects</a>
+								<a href="#projects" class="button scrolly">My Projects</a>
 							</footer>
 
 						</div>
