--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/hxnzxz" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/hxnzxz" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 							<li><a href="mailto:devonwu40@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -147,12 +147,9 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Throughout school and my free time, I've retained familiarity with many different programming languages and integrated development environment.
+								
+							</p>
 
 						</div>
 					</section>
