--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/HousingBackground.png" alt="" /></a>
 										<header>
 											<h3>Housing Manager</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/construction.jpg" alt="" /></a>
 										<header>
 											<h3>*In Progress*</h3>
 										</header>
