--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/HousingBackground.png" alt="" /></a>
 										<header>
-											<h3>Housing Manager</h3>
+											<h3>Housing Manager
+											<a href="https://github.com/hxnzxz/HousingManager"target="_blank"
+											   class="icon brands fa-github"><span class="label">Github</span></a></h3>
 										</header>
 									</article>
 									<article class="item">
